@@ -1,5 +1,10 @@
 2008-03-19  kitone  <kitone@gna.org>
 
+	* src/actions/WaveformEditor.cc:
+	Add cairo renderer.
+
+2008-03-19  kitone  <kitone@gna.org>
+
 	* src/actions/WaveformRenderer.cc:
 	* src/actions/WaveformRenderer.h:
 	* src/actions/WaveformRendererGL.cc:
